--- a/app/views/beaches/show.html.erb
+++ b/app/views/beaches/show.html.erb
@@ -26,7 +26,7 @@
       <div class="col-12 d-flex justify-content-center">
         <p class="geral pr-2">AVALIAÇÃO GERAL</p>
         <% c = 1 %>
-        <% rating = (@beach.overall_rating / 2).round(1) %>
+        <% rating = (@beach.overall_rating / 2)  %>
         <% 5.times do %>
           <% if c < rating %>
             <span class="fa fa-star checked geral pl-2 pt-1"></span>
