--- a/app/views/beaches/index.html.erb
+++ b/app/views/beaches/index.html.erb
@@ -26,7 +26,7 @@
               <div class="front" style="background-image: linear-gradient(rgba(255,255,255,0.5),rgba(0,0,0,0)), url('<%= cl_image_path beach.photo.key%>')">
                 <h2 class="text-shadow align-middle h2flip"><%=beach.name %></h2>
                 <div class="d-flex">
-                  <p class="p location-bottom-right"><%= (beach.overall_rating / 2).round(1) %></p>
+                  <p class="p location-bottom-right"><%=(((beach.overall_rating * 2).round).to_f)/2%></p>
                   <%= image_tag "weather_icons/#{beach.weather_forecast_dailies[0].icon}.png", class: "location-bottom-left" %>
                 </div>
               </div>
