--- a/app/views/beaches/show.html.erb
+++ b/app/views/beaches/show.html.erb
@@ -26,12 +26,14 @@
       <div class="col-12 d-flex justify-content-center">
         <p class="geral pr-2">AVALIAÇÃO GERAL</p>
         <% c = 1 %>
-        <% rating = (@beach.overall_rating / 2)  %>
+        <% rating = ((((@beach.overall_rating * 2).round).to_f)/2) %>
         <% 5.times do %>
           <% if c < rating %>
-            <span class="fa fa-star checked geral pl-2 pt-1"></span>
+            <span class="fas fa-star checked geral pl-2 pt-1"></span>
+          <% elsif c - rating == 0.5%>
+            <span class="fas fa-star-half checked geral pl-2 pt-1"></span>
           <% else %>
-            <span class="fa fa-star geral  pl-2 pt-1"></span>
+            <span class="fas fa-star geral pl-2 pt-1"></span>
           <% end  %>
           <% c += 1 %>
         <% end  %>
